Revert a bunch of changes to try to narrow down what broke CI